# four.meme-copy-trading

./: .gitignore  LICENSE  README.md
rust-bot/: .env.example  .gitignore  Cargo.toml
rust-bot/src/: config.rs  core.rs  fourmeme.rs  main.rs  pancakeswap.rs  types.rs  utils.rs
rust-bot/src/fourmeme/: executor.rs  listener.rs
rust-bot/src/pancakeswap/: executor.rs  listener.rs
typescript-bot/: .env.example  .gitignore  package.json
typescript-bot/src/: index.ts
typescript-bot/src/core/: bot.ts
typescript-bot/src/fourmeme/: executor.ts  listener.ts
typescript-bot/src/pancakeswap/: executor.ts  listener.ts
typescript-bot/src/types/: index.ts
typescript-bot/src/utils/: config.ts  constants.ts  logger.ts
