[package]
name = "bnb-copy-trading-bot-rs"
version = "1.0.0"
edition = "2021"
description = "Four.meme copy trading bot for BNB Chain (Rust). Mirror target wallets on Four.meme and PancakeSwap."
license = "MIT"

[dependencies]
ethers = "2.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
hex = "0.4"
thiserror = "1.0"
futures = "0.3"

[[bin]]
name = "bnb-copy-bot"
path = "src/main.rs"
